<resources>
    <string name="app_name">Cataracta</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Začať snímanie</string>
    <string name="stop_capture">Skončiť snímanie</string>
    <string name="info_title">Postup snímania</string>
    <string name="info_button">OK</string>
    <string name="info_text_1">1. Uistite sa, že fotíte v úplnej alebo takmer úplnej tme</string>
    <string name="info_text_2">2. Uistite sa, že tvár snímanej osoby sa nachádza vo vyznačenej oblasti a telefón držíte na úrovni očí</string>
    <string name="info_text_3">3. Uistite sa, že snímaná osoba má silno zatvorené oči a nič ich nezakrýva (okuliare, šošovky, vlasy)</string>
    <string name="info_text_4">4. Informujte snímanú osobu, nech po zaznení tónu rýchlo otvorí doširoka oči</string>
    <string name="info_text_5">5. Spustite snímanie - zaznie tón</string>
    <string name="info_text_6">6. Počkajte 2 sekundy a ukončite snímanie</string>
    <string name="upload_button">Analyzovať</string>
    <string name="send_button">Poslať</string>
</resources>
