<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#C1B71C1C"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="409dp"
        android:layout_height="40dp"
        android:text="@string/info_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/info_text_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/info_text_1"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:text="@string/info_text_1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_text_2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:text="@string/info_text_2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_1" />

    <TextView
        android:id="@+id/info_text_3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:text="@string/info_text_3"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_2" />

    <TextView
        android:id="@+id/info_text_4"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:text="@string/info_text_4"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_3" />

    <TextView
        android:id="@+id/info_text_5"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:text="@string/info_text_5"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_4" />

    <TextView
        android:id="@+id/info_text_6"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:paddingTop="15dp"
        android:text="@string/info_text_6"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_5" />

    <Button
        android:id="@+id/info_button_ok"
        android:layout_width="323dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_text_6" />

</androidx.constraintlayout.widget.ConstraintLayout>